- more styling - fix blurring issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,12 +61,14 @@ html{
   margin-left: -1px;
   transition:all;
   will-change:transform;
+  transform: scale(1);
+  backface-visibility: hidden;
 
   &:hover{
     transition: all 150ms cubic-bezier(0.19, 1, 0.22, 1);
-    box-shadow: 0px 0px 2em 0px rgba(223, 223, 223, 0.5);
+    box-shadow: 0px 0px 2.5em 0px rgba(15, 15, 15, 0.15);
     border-color:white;
-    transform: scale(1.1);
+    transform: scale(1.095);
     z-index: 1;
   }
 }
@@ -78,4 +80,8 @@ html{
 
 ._u-lh-0{
   line-height: 0;
+}
+
+._u-transform-hack{
+  -webkit-transform: translate3d(0,0,0);
 }
